<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bitcoin</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="textViewInvoer">Uw bedrag:</string>
    <string name="btnEuro">Naar Euro</string>
    <string name="btnBitcoin">Naar Bitcoin</string>
    <string name="textViewResult">Uw resultaat:</string>
    <string name="btnChangeWisselkoers">Wijzig Wisselkoers</string>
    <string name="textViewWisselkoers">Wisselkoers</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtViewBitcoin">1 Bitcoin =</string>
    <string name="btnSaveWisselkoers">Wijzigen</string>

</resources>
