<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewInvoer"
        android:id="@+id/textViewInvoer"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextInvoer"
        android:layout_alignEnd="@+id/textViewInvoer"
        android:layout_below="@+id/textViewInvoer"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextInvoer"
        android:id="@+id/LinearButtonHolder"
        android:layout_centerHorizontal="true"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnEuro"
            android:id="@+id/buttonEuro"
            android:layout_marginRight="50dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnBitcoin"
            android:id="@+id/buttonBitcoin"
            android:gravity="center" />
        </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewResult"
        android:id="@+id/textViewResult"
        android:layout_below="@+id/LinearButtonHolder"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editTextInvoer" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextResult"
        android:layout_below="@+id/textViewResult"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/textViewResult" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnChangeWisselkoers"
        android:id="@+id/buttonChangeWisselkoers"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editTextResult"
        style="@style/CustomStyleButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewWisselkoers"
        android:id="@+id/textViewWisselkoers"
        android:layout_above="@+id/buttonChangeWisselkoers"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center" />



</RelativeLayout>
